[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/HUD/Inbox/letter_entry.gd" type="Script" id=1]

[node name="entry" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 48 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.01
anchor_right = 0.7
anchor_bottom = 1.0
margin_right = 0.240021
valign = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.65
anchor_top = 0.083
anchor_right = 0.98
anchor_bottom = 0.917
margin_left = 0.959961
margin_top = 0.0159998
margin_right = -0.240112
margin_bottom = -0.0160027
custom_constants/separation = 14

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 457.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "view"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 471.0
margin_right = 632.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35
text = "DELETE"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
